fixed sidebar and removed horizontal scrollbar. #30

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,6 +3,8 @@
     padding:10px;
     height: 100vh;
     background-color: var(--dark-color);
+    position: sticky;
+    top: 0;
 
     -webkit-box-shadow: 5px 2px 22px 0px rgba(0,0,0, .5);
     -moz-box-shadow: 5px 2px 22px 0px rgba(0,0,0, .5);
